Changed the number of guesses to 4.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,15 @@ obj/Debug/netcoreapp3.1/4Guesses.AssemblyInfo.cs
 obj/Debug/netcoreapp3.1/4Guesses.AssemblyInfoInputs.cache
 obj/Debug/netcoreapp3.1/4Guesses.assets.cache
 obj/Debug/netcoreapp3.1/4Guesses.csprojAssemblyReference.cache
+bin/Debug/netcoreapp3.1/4Guesses
+bin/Debug/netcoreapp3.1/4Guesses.deps.json
+bin/Debug/netcoreapp3.1/4Guesses.dll
+bin/Debug/netcoreapp3.1/4Guesses.pdb
+bin/Debug/netcoreapp3.1/4Guesses.runtimeconfig.dev.json
+bin/Debug/netcoreapp3.1/4Guesses.runtimeconfig.json
+obj/Debug/netcoreapp3.1/4Guesses
+obj/Debug/netcoreapp3.1/4Guesses.csproj.CoreCompileInputs.cache
+obj/Debug/netcoreapp3.1/4Guesses.csproj.FileListAbsolute.txt
+obj/Debug/netcoreapp3.1/4Guesses.dll
+obj/Debug/netcoreapp3.1/4Guesses.genruntimeconfig.cache
+obj/Debug/netcoreapp3.1/4Guesses.pdb
